--- a/public/css/icinga/base.less
+++ b/public/css/icinga/base.less
@@ -2,6 +2,7 @@
 
 // Black colors
 @black: #535353;
+@white: #fff;
 
 // Gray colors
 @gray: #7F7F7F;
@@ -28,7 +29,7 @@
 @color-pending: #77aaff;
 
 // Icinga colors
-@icinga-blue: #0095BF;
+@icinga-blue: #00C3ED;
 @icinga-secondary: #EF4F98;
 @low-sat-blue: #dae3e6;
 @low-sat-blue-dark: #becbcf;
@@ -42,10 +43,10 @@
 @color-notification-warning: @color-warning-handled;
 
 // Background color for <body>
-@body-bg-color: #fff;
+@body-bg-color: #282E39;
 
 // Text colors
-@text-color: @black;
+@text-color: @white;
 @text-color-inverted: @body-bg-color;
 @text-color-light: @gray;
 @text-color-on-icinga-blue: @body-bg-color;
@@ -57,10 +58,10 @@
 @tr-hover-color: #F5FDFF;
 
 // Menu colors
-@menu-bg-color: #494949;
-@menu-active-bg-color: #333;
+@menu-bg-color: #06062B;
+@menu-active-bg-color: #181742;
 @menu-flyout-bg-color: @body-bg-color;
-@menu-color: @text-color-inverted;
+@menu-color: #DBDBDB;
 @menu-highlight-color: @icinga-blue;
 @menu-2ndlvl-color: #c4c4c4;
 @menu-2ndlvl-highlight-color: @text-color-inverted;
