--- a/public/css/icinga/layout.less
+++ b/public/css/icinga/layout.less
@@ -32,7 +32,7 @@
 }
 
 #header-logo-container {
-  background: @icinga-blue;
+  background: @menu-bg-color;
   height: 6em;
   padding: 1.25em;
   width: 16em;
