--- a/public/css/icinga/tabs.less
+++ b/public/css/icinga/tabs.less
@@ -3,7 +3,7 @@
 // Styles for tab navigation of containers
 
 .tabs {
-  background-color: @icinga-blue;
+  background-color: @menu-bg-color;
   letter-spacing: -0.417em;
 }
 
@@ -27,7 +27,7 @@
   }
 
   > a {
-    color: @body-bg-color;
+    color: @white;
 
     &:hover {
       text-decoration: none;
