base.less: Adjust grays

--- a/public/css/icinga/base.less
+++ b/public/css/icinga/base.less
@@ -5,11 +5,12 @@
 @white: #fff;
 
 // Gray colors
-@gray: #7F7F7F;
-@gray-semilight: #A9A9A9;
-@gray-light: #C9C9C9;
-@gray-lighter: #EEEEEE;
-@gray-lightest: #F7F7F7;
+@gray: #c4c4c4;
+@gray-semilight: #686868;
+@gray-light: #5c5c5c;
+@gray-lighter: #4b4b4b;
+@gray-lightest: #3b3b3b;
+
 @disabled-gray: #9a9a9a;
 
 
@@ -32,7 +33,8 @@
 @icinga-blue: #00C3ED;
 @icinga-secondary: #EF4F98;
 @low-sat-blue: #dae3e6;
-@low-sat-blue-dark: #becbcf;
+@low-sat-blue: #404d72;
+@low-sat-blue-dark: #434374;
 @icinga-blue-light: #a5c4cd;
 @icinga-blue-dark: #0081a6;
 
