--- a/public/css/icinga/menu.less
+++ b/public/css/icinga/menu.less
@@ -500,10 +500,6 @@ html.no-js  #toggle-sidebar {
     &:not(.selected):not(.active):hover,
     &:not(.selected):not(.active):focus {
       background-color: darken(@menu-bg-color, 20);
-
-      > a {
-        color: @menu-2ndlvl-highlight-color;
-      }
     }
   }
 }
@@ -521,7 +517,7 @@ html.no-js  #toggle-sidebar {
   }
 
   &.badge-nav-item a.badge {
-    color: white;
+    color: @body-bg-color;
     flex: 0 1 auto;
     margin-right: 1em;
     padding: .25em;
@@ -537,10 +533,6 @@ html.no-js  #toggle-sidebar {
   &.badge-nav-item:not(.selected) {
     &:hover {
       background-color: darken(@menu-bg-color, 20);
-
-      a {
-        color: white;
-      }
     }
   }
 }
