--- a/public/css/icinga/base.less
+++ b/public/css/icinga/base.less
@@ -56,8 +56,8 @@
 // Text color on <a>
 @link-color: @text-color;
 
-@tr-active-color: #E5F9FF;
-@tr-hover-color: #F5FDFF;
+@tr-active-color: rgba(0,195,237,0.1);
+@tr-hover-color: rgba(0,195,237,0.5);
 
 // Menu colors
 @menu-bg-color: #06062B;
