login.phtml: invert icinga logo

--- a/application/views/scripts/authentication/login.phtml
+++ b/application/views/scripts/authentication/login.phtml
@@ -9,7 +9,7 @@
                         . ' Chrome, Safari and Firefox.'
                     ) ?>
                 </div>
-                <div class="logo-wrapper"><div id="icinga-logo" class="invert" aria-hidden="true"></div></div>
+                <div class="logo-wrapper"><div id="icinga-logo" aria-hidden="true"></div></div>
                 <?php if ($requiresSetup): ?>
                     <p class="config-note"><?= sprintf(
                         $this->translate(
