--- a/public/css/icinga/layout.less
+++ b/public/css/icinga/layout.less
@@ -226,7 +226,7 @@
   &.success {
     background-color: @color-notification-success;
     background-image: url(../img/icons/success.png);
-    color: @text-color;
+    color: @text-color-inverted;
   }
 
   &.warning {
