--- a/public/css/icinga/menu.less
+++ b/public/css/icinga/menu.less
@@ -124,7 +124,7 @@
     position: absolute;
     right: -.75em;
 
-    background-color: #fff;
+    background-color: @body-bg-color;
     box-shadow: 0 0 1em 0 rgba(0,0,0,0.6);
     content: "";
     display: block;
