Adjust sidebar toggle icon color

--- a/public/css/icinga/menu.less
+++ b/public/css/icinga/menu.less
@@ -454,7 +454,7 @@ input[type=text].search-input {
   background: none;
   border: none;
   padding: 0;
-  color: @gray-light;
+  color: @text-color-light;
   position: absolute;
   bottom: 0.2em;
   right: 0;
