icinga-light-theme.less: WIP

--- a/public/css/themes/icinga-light-theme.less
+++ b/public/css/themes/icinga-light-theme.less
@@ -28,3 +28,9 @@
 #layout:not(.minimal-layout).sidebar-collapsed #header-logo {
   background-image: url('../img/icinga-logo-compact-inverted.svg');
 }
+
+#menu input.search,
+.controls input.search,
+input.search {
+  background-image: url(../img/icons/search.png);
+}
