CSS: Adjust color for .control-info hover
refs #4337

--- a/public/css/icinga/forms.less
+++ b/public/css/icinga/forms.less
@@ -77,10 +77,6 @@ form.inline {
       margin-left: 0;
     }
 
-    .control-info {
-      opacity: .5;
-    }
-
     .errors {
       margin: 0;
     }
@@ -124,8 +120,8 @@ form.icinga-form.inline .control-label-group {
     margin-right: 0;
   }
 
-  &:hover:before {
-    color: black;
+  &:hover {
+    opacity: 1;
   }
 }
 
