css: Initialize `@iplWebAssets` variable

--- a/public/css/icinga/main.less
+++ b/public/css/icinga/main.less
@@ -1,5 +1,8 @@
 /*! Icinga Web 2 | (c) 2014 Icinga Development Team | GPLv2+ */
 
+// Url for static ipl assets
+@iplWebAssets: "../lib/icinga/icinga-php-library";
+
 // Width for the name column--th--of name-value-table
 @name-value-table-name-width: 38/3em;
 
